--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
   "dependencies": {
     "express": "^4.16.4",
     "joi": "^14.3.1",
+    "mosca": "^2.8.3",
     "request": "^2.88.0",
     "request-promise": "^4.2.4"
   }
